--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,8 +26,8 @@
                 android:id="@+id/login_image"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/hurry_logo_back"/>
+                android:scaleType="centerCrop"
+                android:src="@drawable/hurry_back"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/jose_san_bold"
-                    android:text="Mobile Verification"
+                    android:text="@string/mobile_verification"
                     android:textColor="@color/colorPrimary"
                     android:textSize="20sp" />
 
@@ -53,7 +53,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/jose_san"
-                    android:text="Please enter your mobile number"
+                    android:text="@string/please_enter_your_mobile_number"
                     android:textSize="16sp" />
 
                 <androidx.legacy.widget.Space
@@ -156,7 +156,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="35dp"
                     android:fontFamily="@font/jose_san"
-                    android:text="Terms And Condition"
+                    android:text="@string/terms_and_condition"
                     android:textSize="16sp" />
 
             </LinearLayout>
