--- a/app/src/main/res/layout/activity_remaining_steps.xml
+++ b/app/src/main/res/layout/activity_remaining_steps.xml
@@ -41,7 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/jose_san_bold"
-                        android:text="Welcome , "
+                        android:text="@string/welcome"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
@@ -49,7 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/jose_san_bold"
-                        android:text="User"
+                        android:text="@string/user"
                         android:textColor="@color/black"
                         android:textSize="24sp" />
 
@@ -104,7 +104,7 @@
                                     android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp"
                                     android:fontFamily="@font/jose_san_bold"
-                                    android:text="Next step"
+                                    android:text="@string/next_step"
                                     android:textSize="14sp" />
 
                                 <TextView
@@ -155,7 +155,7 @@
                                     android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp"
                                     android:fontFamily="@font/jose_san_bold"
-                                    android:text="Next step"
+                                    android:text="@string/next_step"
                                     android:textSize="14sp" />
 
                                 <TextView
@@ -206,7 +206,7 @@
                                     android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp"
                                     android:fontFamily="@font/jose_san_bold"
-                                    android:text="Next step"
+                                    android:text="@string/next_step"
                                     android:textSize="14sp" />
 
                                 <TextView
@@ -257,7 +257,7 @@
                                     android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp"
                                     android:fontFamily="@font/jose_san_bold"
-                                    android:text="Next step"
+                                    android:text="@string/next_step"
                                     android:textSize="14sp" />
 
                                 <TextView
@@ -309,7 +309,7 @@
                                     android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp"
                                     android:fontFamily="@font/jose_san_bold"
-                                    android:text="Next step"
+                                    android:text="@string/next_step"
                                     android:textSize="14sp" />
 
                                 <TextView
@@ -360,7 +360,7 @@
                                     android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp"
                                     android:fontFamily="@font/jose_san_bold"
-                                    android:text="Next step"
+                                    android:text="@string/next_step"
                                     android:textSize="14sp" />
 
                                 <TextView
@@ -395,7 +395,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
                     android:fontFamily="@font/jose_san_bold"
-                    android:text="Next Step"
+                    android:text="@string/next_step"
                     android:textColor="@color/white">
 
 
