--- a/app/src/main/res/layout/bid_page.xml
+++ b/app/src/main/res/layout/bid_page.xml
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/jose_san_bold"
-                    android:text="Pickup Location"
+                    android:text="@string/pickup_location"
                     android:textSize="10sp" />
 
                 <TextView
@@ -78,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/jose_san_bold"
-                    android:text="Drop of Location"
+                    android:text="@string/drop_of_location"
                     android:textSize="10sp" />
 
                 <TextView
@@ -109,7 +109,7 @@
                         android:layout_marginLeft="4dp"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/jose_san_bold"
-                        android:text="Ride Type: "
+                        android:text="@string/ride_type"
                         android:textColor="#000"
                         android:textSize="12sp"
                         android:textStyle="bold" />
@@ -138,7 +138,7 @@
                         android:layout_marginLeft="4dp"
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/jose_san_bold"
-                        android:text="Number of People: "
+                        android:text="@string/number_of_people"
                         android:textColor="#000"
                         android:textSize="12sp"
                         android:textStyle="bold" />
@@ -170,7 +170,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/jose_san_bold"
-                    android:text="About Trip"
+                    android:text="@string/about_trip"
                     android:textSize="10sp" />
 
                 <TextView
@@ -179,7 +179,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
                     android:fontFamily="@font/jose_san_bold"
-                    android:text="lorem Ipsum Doler met ammmet"
                     android:textColor="#000"
                     android:textSize="12sp"
                     android:textStyle="bold" />
@@ -193,19 +192,22 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/bidPrice"
+                    android:id="@+id/bid"
+                    android:inputType="number"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/jose_san_bold"
-                    android:hint="Enter Your Price"
-                    android:inputType="number" />
+                    android:hint="@string/do_bid"
+                    android:layout_height="wrap_content"/>
+
+
+
 
                 <Button
                     android:id="@+id/submitBtn"
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/jose_san_bold"
-                    android:text="Submit" />
+                    android:text="@string/submit" />
             </LinearLayout>
 
 
