--- a/app/src/main/res/layout/driver_profile.xml
+++ b/app/src/main/res/layout/driver_profile.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/jose_san_bold"
-        android:text="Cristina Perry"
+
         android:textColor="#000"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -40,14 +40,14 @@
                 android:drawableLeft="@drawable/phone_icon"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/jose_san_bold"
-                android:text="Mobile: " />
+                android:text="@string/mobile" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:fontFamily="@font/jose_san_bold"
-                android:text="+8801856508888" />
+                 />
         </LinearLayout>
 
         <LinearLayout
@@ -71,7 +71,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:fontFamily="@font/jose_san_bold"
-                android:text="xxksjd2232xz44" />
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -88,7 +88,7 @@
                 android:drawableLeft="@drawable/car_icon"
                 android:drawablePadding="8dp"
                 android:fontFamily="@font/jose_san_bold"
-                android:text="Car Model: "
+                android:text="@string/car_model"
                 android:textSize="18sp" />
 
             <TextView
@@ -96,7 +96,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:fontFamily="@font/jose_san_bold"
-                android:text="Toyota Premio 2019"
+                android:text=""
                 android:textColor="#000000"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -239,7 +239,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/jose_san_bold"
-        android:text="Gallery"
+        android:text="@string/gallery"
         android:textAlignment="center"
         android:textSize="20sp" />
 
